# REACT

./: .env  .gitignore  CMakeLists.txt  README.md  compose.yaml  install_dev.sh  package.xml  react.rosinstall  requirements.txt  setup.py  tmux.conf  zshrc
app/: eval_embedding.py  eval_spg.py  offline_eval.py  offline_greedy_eval.py  offline_matching.py  offline_matching_greedy.py  results_report.py  scene_description.py
bashrc.d/: ros.sh
config/: aliasrc  starship.toml
config/zellij/: config.kdl
config/zellij/layouts/: hydra.kdl  hydra_dev.kdl
doc/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  react.core.html  react.eval.html  react.html  react.matching.html  react.utils.html  search.html  searchindex.js
doc/_modules/: index.html
doc/_sources/: index.rst.txt  modules.rst.txt  react.core.rst.txt  react.eval.rst.txt  react.matching.rst.txt  react.rst.txt  react.utils.rst.txt
dockerfiles/: trt.Dockerfile  trt_devel.Dockerfile
gt_matches/: gt_flat.yml  gt_study_hall.yml
gt_mathces/: gt_coffee_room.yml
misc/: nnn_ubt2004
python/react/core/: bounding_box.py  instance.py  instance_cluster.py  map_updater.py  object_node.py  react_manager.py
python/react/eval/: evaluator.py
python/react/matching/: ground_truth.py  hungarian_algorithm.py  match_results.py  superglue_matching.py
scripts/: convert_seg.py  convert_seg_30.py  convert_seg_inst.py  extract_data.py  get_gt.py  gt_config.py  gt_lab_front.yml
zshrc.d/: .fzf.zsh  .p10k.zsh  nnn.zsh  nvim-funcs.zsh  ros_config.zsh  vi-mode.zsh  zshenvs.zsh
(+18 files in other folders)
