<?xml version="1.0"?>
<package format="2">
  <name>react</name>
  <version>0.0.0</version>
  <description>The REACT package</description>
  <maintainer email="phuoc.nguyen@aalto.fi">Phuoc Nguyen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hydra_stretch_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>hydra_stretch_msgs</build_export_depend>
  <build_export_depend>hydra_seg_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>hydra_stretch_msgs</exec_depend>
  <exec_depend>hydra_seg_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
