<?xml version="1.0"?>
<package format="2">
  <name>react</name>
  <version>0.1.0</version>
  <description>The REACT package</description>
  <maintainer email="phuoc.nguyen@aalto.fi">Phuoc Nguyen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>hydra_seg_ros</depend>
  <depend>react_embedding</depend>
  <export>
  </export>
</package>
